# LucyDreams

./: .gitignore  CMakeLists.txt  Lucy.cpp  Lucy.h  README.md
assets/images/: bigCloud.piskel
src/: Camera.h  CloudPlatform.cpp  CloudPlatform.h  Colour.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  Lucy.cpp  Lucy.h  PlatformPlacer.cpp  PlatformPlacer.h  Position.h  Sprite.cpp  Sprite.h  Trigger.cpp  Trigger.h  allScenes.cpp  allScenes.h  main.cpp  utils.h
src/cameras/: CMakeLists.txt  Camera.cpp  Camera.h  SpriteCamera.cpp  SpriteCamera.h
src/clouds/: CMakeLists.txt  CheckpointPlatform.cpp  CheckpointPlatform.h  CloudPlatform.cpp  CloudPlatform.h  PlatformPlacer.cpp  PlatformPlacer.h
src/colliders/: AABBCollider.cpp  AABBCollider.h  CMakeLists.txt  Collider.cpp  Collider.h  PlatformerCollision.cpp  PlatformerCollision.h
src/colliders/src/: AABBCollider.cpp  Collider.cpp  PlatformerCollision.cpp
src/components/: AnimationComponent.cpp  AnimationComponent.h  CMakeLists.txt  Component.cpp  Component.h  ImageComponent.cpp  ImageComponent.h
src/components/src/: AnimationComponent.cpp  Camera.cpp  Component.cpp  ImageComponent.cpp
src/gameData/: CMakeLists.txt  Game.cpp  Game.h  GameObject.cpp  GameObject.h  Sprite.cpp  Sprite.h
src/handlers/: CMakeLists.txt  Camera.cpp  Camera.h  CameraHandler.cpp  CameraHandler.h  DisplayHandler.cpp  DisplayHandler.h  EventCallback.cpp  EventsHandler.cpp  EventsHandler.h  GameObjectHandler.cpp  GameObjectHandler.h  Handler.cpp  Handler.h  HandlerError.cpp  HandlerError.h  ImageHandler.cpp  ImageHandler.h  InputHandler.cpp  InputHandler.h  Scene.cpp  Scene.h  SceneHandler.cpp  SceneHandler.h  WindowHandler.cpp  WindowHandler.h
src/handlers/inc/: CameraHandler.h  EventCallback.h  WindowHandler.h
src/handlers/src/: Camera.cpp  CameraHandler.cpp  DisplayHandler.cpp  EventCallback.cpp  EventsHandler.cpp  GameObjectHandler.cpp  Handler.cpp  HandlerError.cpp  ImageHandler.cpp  InputHandler.cpp  SceneHandler.cpp  WindowHandler.cpp
src/lucy/: CMakeLists.txt  Lucy.cpp  Lucy.h
src/platformOutput/: platforms.out
src/utils/: CMakeLists.txt  Colour.h  Position.h  Trigger.cpp  Trigger.h  spriteUtils.cpp  spriteUtils.h  utils.cpp  utils.h
src/utils/src/: utils.cpp
